@@ -23,6 +23,8 @@ Version 1.2
 
 - Added `line_number_start` option to image formatter (#456).
 
+- Added `hl_lines` and `hl_color` options to image formatter (#457).
+
 - Fixed the HtmlFormatter's handling of noclasses=True to not output any
   classes (#427).
 
